--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-materialize": "^3.10.0",
+    "react-particles-js": "^3.6.0",
     "react-pdf": "^5.6.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "semantic-ui-react": "^2.0.4",
+    "tsparticles": "^1.39.0",
+    "tsparticles-plugin-emitters": "^2.0.0-beta.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
